namespace Candy.API.Models.DTO.Orders;

public class OrderItemDto
{
  public int ProductId { get; set; }
  public uint Quantity { get; set; }
}
